--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"><canvas id="screen"></canvas></div>
+    <div id="app">
+      <canvas id="screen"></canvas>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
